[COFFEE][NHAT][USER]update valildate, view

--- a/coffee_project/src/main/resources/templates/user/change.html
+++ b/coffee_project/src/main/resources/templates/user/change.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" th:href="@{/bootstrap-5.0.2-dist/css/bootstrap.css}"
           href="../static/bootstrap-5.0.2-dist/css/bootstrap.css">
 
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta2/css/all.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
     <style>
         td {
             padding-right: 30px;
@@ -48,16 +48,15 @@
                 <div class="col-12">
 
                     <!-------------------------------CODE--------------------------------------------------->
-                    <div class="row" style="margin-top: 15px;margin-bottom: 20px">
+                    <h1 class="col-11" style="text-align: center;margin-top: 2rem;margin-bottom: 20px">
+                        Thay Đổi Thông Tin Nhân Viên</h1>
 
-                        <a class="col-1 mt-2" style="text-decoration: none" href="/user/list">
+                        <a class="col-1 mt-2" style="text-decoration: none" href="/user/new-employee">
                             <button title="Quay lại"
                                     class="btn btn-primary">
                                 <i class="fa-solid fa-circle-arrow-left"></i></button>
                         </a>
-                        <h1 class="col-11" style="text-align: center">
-                            Thay Đổi Thông Tin Nhân Viên</h1>
-                    </div>
+
 
                     <div class="row">
                         <div class="col-4">
