--- a/coffee_project/src/main/resources/templates/user/create.html
+++ b/coffee_project/src/main/resources/templates/user/create.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <title>Đăng ký thông tin nhân viên</title>
 
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta2/css/all.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
     <style th:insert="/layout::style"></style>
     <!--                    //File css Img-->
     <style>
@@ -67,7 +67,7 @@
             <div class="row min-vh-100 content">
                 <div class="col-12">
                     <!---------------BODY---------------------------------------------------------------------------------------->
-                    <div class="row" style="margin-top: 15px;margin-bottom: 20px">
+                    <div class="row" style="margin-top: 2rem;margin-bottom: 20px">
 
                         <h1 class="col-10" style="text-align: center">Chỉnh Sửa Thông Tin Nhân Viên</h1>
 
