--- a/coffee_project/src/main/resources/templates/user/list.html
+++ b/coffee_project/src/main/resources/templates/user/list.html
@@ -216,23 +216,23 @@
                     </div>
                     <div class="col-7">
 
-                        <div>Tên: <span id="userNameDetail"></span></div>
+                        <div><strong>Tên:</strong> <span id="userNameDetail"></span></div>
 
-                        <div>Giới tính: <span id="userGender"></span></div>
+                        <div><strong>Giới tính:</strong> <span id="userGender"></span></div>
 
-                        <div>Ngày Sinh: <span id="userBirthday"></span></div>
+                        <div><strong>Ngày Sinh:</strong> <span id="userBirthday"></span></div>
 
-                        <div>Điện thoại: <span id="userPhoneNumber"></span></div>
+                        <div><strong>Điện thoại:</strong> <span id="userPhoneNumber"></span></div>
 
-                        <div>Email: <span id="userEmail"></span></div>
+                        <div><strong>Email:</strong> <span id="userEmail"></span></div>
 
-                        <div>Căn cước: <span id="userIdCard"></span></div>
+                        <div><strong>Căn cước:</strong> <span id="userIdCard"></span></div>
 
-                        <div>Lương: <span id="userSalary"></span></div>
+                        <div><strong>Lương:</strong> <span id="userSalary"></span></div>
 
-                        <div>Địa chỉ: <span id="userAddress"></span></div>
+                        <div><strong>Địa chỉ:</strong> <span id="userAddress"></span></div>
 
-                        <div>Ca làm việc: <span id="employeeTypeName"></span></div>
+                        <div><strong>Ca làm việc:</strong> <span id="employeeTypeName"></span></div>
 
                     </div>
                 </div>
