--- a/coffee_project/src/main/resources/templates/user/new-employee.html
+++ b/coffee_project/src/main/resources/templates/user/new-employee.html
@@ -6,7 +6,7 @@
     <style th:insert="/layout::style"></style>
     <link rel="stylesheet" th:href="@{/bootstrap-5.0.2-dist/css/bootstrap.css}"
           href="../static/bootstrap-5.0.2-dist/css/bootstrap.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta2/css/all.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
 
 </head>
 <body>
@@ -23,7 +23,7 @@
 
 
                     <!------------------CODE------------------------------->
-                    <h1 class="col-11" style="text-align: center">
+                    <h1 class="col-11" style="margin-top: 2rem;text-align: center">
                         Danh Sách Nhân Viên Mới</h1>
                     <div class="row" style="margin-top: 15px;margin-bottom: 20px">
 
