--- a/coffee_project/src/main/resources/templates/user/update.html
+++ b/coffee_project/src/main/resources/templates/user/update.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <title>Sửa thông tin</title>
 
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta2/css/all.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
     <style th:insert="/layout::style"></style>
     <script src="/js/jquery-3.7.0.min.js"></script>
 
@@ -69,7 +69,7 @@
 
                     <!-------------------------CODE--------------------------------------------------------------------------------->
 
-                    <div class="row" style="margin-top: 15px;margin-bottom: 20px">
+                    <div class="row" style="margin-top: 2rem;margin-bottom: 20px">
 
                         <a class="col-1 mt-2" style="text-decoration: none" href="/order/">
                             <button title="Quay lại"
