[Quan][Account] sửa lại thêm mới account và không hiển thị account admin

--- a/coffee_project/src/main/resources/templates/account/list-account.html
+++ b/coffee_project/src/main/resources/templates/account/list-account.html
@@ -9,117 +9,123 @@
           href="../static/bootstrap-5.0.2-dist/css/bootstrap.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta2/css/all.min.css">
     <script src="/js/jquery-3.7.0.min.js"></script>
+    <style>
+        .modal-backdrop {
+            z-index: 1040 !important;
+        }
+    </style>
 </head>
 <body>
-<div th:replace="layout::nav"></div>
-
 <div class="container-fluid">
     <div class="row">
-        <div th:replace="layout::content1">
+        <div th:replace="layout::side-bar">
         </div>
-        <div class="col-sm-10" style="background-color: #FEFAE0;min-height: 700px">
-            <h1 style="text-align: center">Quản Lý Tài Khoản</h1>
-            <div class="row col-12">
-                <div class="row col-3">
-                    <form id="signup" th:object="${accountDto}" th:action="@{/account/signup}"
-                          th:method="post">
-                        <label style="float: left" class="d-flex">
-                            <input id="username" th:field="*{accountName}" type="text"
-                                   style="display: inline-block;margin: 5px" class="form-control" required>
-                            <button type="submit" style="display: inline-block;margin: 5px" class="btn btn-primary"
-                                    onclick="showToast('Thêm mới thành công')">
-                                <i class="fa-solid fa-plus"></i></button>
-                        </label>
-                    </form>
-                </div>
-                <div class="col-3">
-                    <div id="toast-container">
-                        <div id="toast" class="hide"></div>
+        <div class="col-10  col-sm-9 col-md-9 col-lg-10">
+            <div th:replace="layout::nav-bar">
+            </div>
+            <div class="row min-vh-100 content">
+                <div class="col-12">
+                    <div class="row">
+                        <h1 style="text-align: center">Quản Lý Tài Khoản</h1>
+                        <!--                    //     search-->
+                        <form th:action="@{/account/admin}" th:method="get">
+                            <label style="float: right">
+                                <input style="width: 400px;margin: 5px;display:inline-block" type="text"
+                                       id="disabledTextInput" class="form-control"
+                                       name="searchName" placeholder="Nhập tên" th:value="${searchName}">
+                                <button style="display: inline-block;margin-bottom: 5px" class="btn btn-primary"
+                                        type="submit"><i class="fas fa-search"></i></button>
+                            </label>
+                        </form>
+                    </div>
+                    <div class="row col-12" style="margin: auto">
+                        <div class="col-4">
+                            <div>
+                                <label for="username1"><h5>
+                                    Đăng ký tài khoản mới
+                                </h5></label>
+                                <hr/>
+                                <label for="username1">Tên tài khoản</label>
+                                <div class="input-group">
+                                    <input id="username1" type="text"
+                                           style="margin: 5px;display: inline-block" class="form-control" required>
+                                    <button type="button" style="margin: 5px;display: inline-block" class="btn btn-primary"
+                                            onclick="confirmCreate()"
+                                            data-bs-toggle="modal"
+                                            data-bs-target="#exampleModal1">
+                                        <i class="fa-solid fa-plus"></i>
+                                    </button>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-8">
+                            <table class="table table-hover">
+                                <tr>
+                                    <th>STT</th>
+                                    <th>Tên tài khoản</th>
+                                    <th>Vị Trí</th>
+                                    <th colspan="1">Xóa</th>
+                                </tr>
+                                <tr th:each="a,status:${accountPage}">
+                                    <td th:text="${status.count}"></td>
+                                    <td th:text="${a.accountName}"></td>
+                                    <td th:text="${a.role.roleName=='employee'}?'Nhân viên':'Quản trị viên'">
+
+                                    </td>
+                                    <td>
+                                        <!-- Button trigger modal -->
+                                        <button th:if="${a.role.roleName!='admin'}" type="button" class="btn btn-danger"
+                                                data-bs-toggle="modal"
+                                                data-bs-target="#exampleModal"
+                                                th:attr="onclick=|confirmDelete(${a.accountName})|">
+                                            <i class="fa-regular fa-trash-can"></i>
+                                        </button>
+                                    </td>
+                                </tr>
+                            </table>
+                        </div>
+                    </div>
+                    <!-----------------------------------------Phân trang----------------------------------------->
+                    <div th:if="${accountPage.totalPages >0}">
+                        <div class="d-flex justify-content-center">
+                            <nav aria-label="Page navigation example">
+                                <ul class="pagination">
+                                    <li th:class="${!accountPage.hasPrevious()} ? 'page-item disabled' : 'page-item'">
+                                        <a class="page-link"
+                                           th:href="@{/account/admin(page=${(accountPage.number)-1},searchName=${searchName})}">Trước
+                                        </a>
+                                    </li>
+                                    <li class="page-link disabled"><span th:text="${accountPage.number+1}"></span>/<span
+                                            th:text="${accountPage.totalPages}"></span>
+                                    </li>
+                                    <li th:class="${!accountPage.hasNext()} ? 'page-item disabled' : 'page-item'">
+                                        <a class="page-link"
+                                           th:href="@{/account/admin(page=${accountPage.number+1},searchName=${searchName})}">Sau
+                                        </a>
+                                    </li>
+                                </ul>
+                            </nav>
+                        </div>
                     </div>
                 </div>
-                <div class="col-6">
-                    <form th:action="@{/account/admin}" th:method="get">
-                        <label style="float: right">
-                            <input style="width: 400px;margin: 5px;display:inline-block" type="text"
-                                   id="disabledTextInput" class="form-control"
-                                   name="searchName" placeholder="Nhập tên" th:value="${searchName}">
-                            <button style="display: inline-block;margin-bottom: 5px" class="btn btn-primary"
-                                    type="submit"><i class="fas fa-search"></i></button>
-                        </label>
-                    </form>
-                </div>
-
             </div>
-
-            <table class="table table">
-                <tr>
-                    <th>STT</th>
-                    <th>Tên tài khoản</th>
-                    <th>Quyền</th>
-<!--                    <th>Chi tiết</th>-->
-<!--                    <th colspan="1">Sửa</th>-->
-                    <th colspan="1">Xóa</th>
-                </tr>
-                <tr th:each="a,status:${accountPage}">
-                    <td th:text="${status.count}"></td>
-                    <td th:text="${a.accountName}"></td>
-                    <td th:text="${a.role.roleName=='employee'}?'Nhân viên':'Quản trị viên'">
-
-                    </td>
-<!--                    <td>-->
-<!--                        <a th:href="" class="btn btn-primary"><i-->
-<!--                                class="fa-solid fa-circle-info"></i></a>-->
-<!--                    </td>-->
-<!--                    <td>-->
-<!--                        <button class="btn btn-primary">-->
-<!--                            <i class="fa-solid fa-pen-to-square"></i>-->
-<!--                        </button>-->
-<!--                    </td>-->
-                    <td>
-                        <!-- Button trigger modal -->
-                        <button th:if="${a.role.roleName!='admin'}" type="button" class="btn btn-danger" data-bs-toggle="modal"
-                                data-bs-target="#exampleModal"
-                                th:attr="onclick=|confirm('${a.accountName}')|">
-                            <i class="fa-regular fa-trash-can"></i>
-                        </button>
-                    </td>
-                </tr>
-            </table>
-            <!-----------------------------------------Phân trang----------------------------------------->
-            <div th:if="${accountPage.totalPages >0}">
-                <div class="d-flex justify-content-center">
-                    <nav aria-label="Page navigation example">
-                        <ul class="pagination">
-                            <li th:class="${!accountPage.hasPrevious()} ? 'page-item disabled' : 'page-item'">
-                                <a class="page-link"
-                                   th:href="@{/account/admin(page=${(accountPage.number)-1},searchName=${searchName})}">Lùi
-                                </a>
-                            </li>
-                            <li class="page-link disabled"><span th:text="${accountPage.number+1}"></span>/<span
-                                    th:text="${accountPage.totalPages}"></span>
-                            </li>
-                            <li th:class="${!accountPage.hasNext()} ? 'page-item disabled' : 'page-item'">
-                                <a class="page-link"
-                                   th:href="@{/account/admin(page=${accountPage.number+1},searchName=${searchName})}">Tới
-                                </a>
-                            </li>
-                        </ul>
-                    </nav>
-                </div>
-            </div>
+            <div th:replace="~{layout::footer}"></div>
         </div>
     </div>
 </div>
-<!-- Modal -->
+
+
+<!-- Modal xóa-->
 <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
     <div class="modal-dialog">
         <div class="modal-content">
             <form action="/account/delete" method="post">
                 <div class="modal-header">
-                    <h5 class="modal-title" id="exampleModalLabel">Bạn muốn xóa tài khoản :</h5>
+                    <h5 class="modal-title" id="exampleModalLabel">Thông báo!!!!</h5>
                     <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                 </div>
                 <div class="modal-body">
+                    <p>Bạn muốn xóa tài khoản :</p>
                     <input type="text" hidden="hidden" name="accountName" id="accountName">
                     <span id="usernameDelete" ></span>
                 </div>
@@ -132,6 +138,37 @@
         </div>
     </div>
 </div>
+
+
+<!--// thêm mới-->
+<div class="modal fade" id="exampleModal1" tabindex="-1" aria-labelledby="exampleModalLabel1"
+     aria-hidden="true">
+    <div class="modal-dialog">
+        <div class="modal-content">
+            <form th:object="${accountDto}" th:action="@{/account/signup}" th:method="post">
+                <div class="modal-header">
+                    <h5 class="modal-title" id="exampleModalLabel1">Thông báo!!!!</h5>
+                    <button type="button" class="btn-close" data-bs-dismiss="modal"
+                            aria-label="Close"></button>
+                </div>
+                <div class="modal-body">
+                    bạn có muốn thêm tài khoản
+                    <input th:field="*{accountName}" type="text" hidden="hidden" name="accountName1"
+                           id="accountName1">
+                    <span id="usernameCreate"></span>
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Huỷ</button>
+                    <button type="submit" onclick="showToast('Thêm mới thành công')" class="btn btn-primary">Xác
+                        nhận
+                    </button>
+                </div>
+            </form>
+        </div>
+    </div>
+</div>
+
+
 <!-------------------------Toast-------------------------------------------------------------->
 <div class="position-fixed bottom-0 end-0 p-3">
     <div id="liveToast" class="toast hide" role="alert" aria-live="assertive" aria-atomic="true">
@@ -147,14 +184,19 @@
 <!-------------------------End Toast-------------------------------------------------------------->
 
 
-<div th:replace="~{layout::footer}"></div>
 <script>
-    function confirm(name) {
+    //delete modal
+    function confirmDelete(name) {
         document.getElementById("usernameDelete").innerText = name;
         document.getElementById("accountName").value = name;
     }
 
-
+    // create modal
+    function confirmCreate() {
+        let name = document.getElementById("username1").value;
+        document.getElementById("usernameCreate").innerText = name;
+        document.getElementById("accountName1").value = name;
+    }
 </script>
 <script th:if="${msg}">
     // toast
