--- a/coffee_project/src/main/resources/templates/accuracy.html
+++ b/coffee_project/src/main/resources/templates/accuracy.html
@@ -37,7 +37,7 @@
                     <div style="background: #fefae0" class="login-wrap p-4 p-md-5">
                         <div class="d-flex">
                             <div class="w-100">
-                                <h2 class="mb-4">Quên mật khẩu</h2>
+                                <h2 class="mb-4">Đặt lại mật khẩu</h2>
                             </div>
                             <div class="w-100">
                                 <p class="social-media d-flex justify-content-end">
