--- a/coffee_project/src/main/resources/templates/layout.html
+++ b/coffee_project/src/main/resources/templates/layout.html
@@ -11,7 +11,7 @@
             font-family: Verdana, Geneva, Tahoma, sans-serif;
         }
 
-        ul li:hover {
+        row ul li:hover {
             background-color: #c29867;
             border-radius: 3px;
         }
