[COFFEE][NHAT][USER]update list.html

--- a/coffee_project/src/main/resources/templates/user/list.html
+++ b/coffee_project/src/main/resources/templates/user/list.html
@@ -188,6 +188,7 @@
                     <input id="userId" hidden="hidden" name="userId">
                     <input name="userName" id="userName" hidden="hidden">
                     <div>Bạn có xác nhận xoá người dùng có tên là: <span id="userNameDisplay"></span></div>
+                    <div style="color: red"><strong>Lưu ý:</strong> không thể hoàn tác hành động này!</div>
                 </div>
                 <div class="modal-footer">
                     <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Thoát</button>
